# novel-proofer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  renovate.json  start.bat  start.sh
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  issue-title-guard.yml
docs/: ARCHITECTURE.md  DEVELOP.md  PERFORMANCE.md  STATE_MACHINE.md  TESTCASES.md  USAGE.md  WORKFLOW.md  WORKFLOW_RECOVERY_REFACTOR.md  openapi.json
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
novel_proofer/: api.py  background.py  converters.py  env.py  executions.py  job_records.py  jobs.py  logging_setup.py  models.py  paths.py  runner.py  states.py  workflow.py  workflow_context.py
novel_proofer/llm/: client.py  config.py
templates/static/js/: api.js  attachment.js  main.js  modal.js  state.js  ui.js  workflow.js
tests/: conftest.py  test_env.py  test_executions.py  test_logging_setup.py  test_workflow.py
tests/api/: test_attachment_js.py  test_endpoints.py  test_lifecycle_js.py  test_server_utils.py  test_workflow_js.py
tests/jobs/: test_store.py
tests/llm/: test_client.py  test_think_filter.py
tests/runner/: test_blank_chunk.py  test_extra_coverage.py  test_jobs_logs.py  test_run_job.py
tools/: check-agents.py  check-large-files.py  export-openapi.py
